Echoing server implementation, further model test